--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "@supabase/supabase-js": "^2.86.0",
+    "@turf/turf": "^7.3.1",
     "@vonage/server-sdk": "^3.25.1",
     "axios": "^1.13.2",
     "jsonwebtoken": "^9.0.2",
@@ -42,6 +43,7 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@types/express": "^5.0.0",
+    "@types/geojson": "^7946.0.16",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
